terraform/ec2.tf
# Get the latest Ubuntu linux image
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

}

# Create a security group for the EC2 instance
resource "aws_security_group" "wanderlust_sg" {
  name        = "wanderlust_sg"
  description = "Security group for the wanderlust EC2 instance"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Redis"
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SonarQube"
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SMTPS"
    from_port   = 465
    to_port     = 465
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SMTP"
    from_port   = 25
    to_port     = 25
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Kubernetes API Server"
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# Create a key pair for SSH access to the EC2 instance
resource "aws_key_pair" "wannderlust_key" {
  key_name   = "wanderlust_key"
  public_key = file("~/.ssh/id_ed25519.pub")
}

# Create master and slave EC2 instances
resource "aws_instance" "wanderlust_master_instance" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "c7i-flex.large"
  key_name               = aws_key_pair.wannderlust_key.key_name
  vpc_security_group_ids = [aws_security_group.wanderlust_sg.id]

  iam_instance_profile = aws_iam_instance_profile.eks_instance_profile.name

  root_block_device {
    volume_size = 8
    volume_type = "gp3"
  }

  tags = {
    Name = "wanderlust-master"
  }
}

resource "aws_instance" "wanderlust_slave_instance" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t3.small"
  key_name               = aws_key_pair.wannderlust_key.key_name
  vpc_security_group_ids = [aws_security_group.wanderlust_sg.id]

  iam_instance_profile = aws_iam_instance_profile.eks_instance_profile.name

  root_block_device {
    volume_size = 8
    volume_type = "gp3"
  }
  tags = {
    Name = "wanderlust-slave"
  }
}
